<resources>
    <!--App Information -->
    <string name="app_name">gastronome</string>
    <!--Login Page-->
    <string name="loginWelcome">Welcome to Gastronome</string>
    <string name="loginPrompt">Please sign in to your account.</string>
    <string name="loginEmail">email</string>
    <string name="loginPassword">password</string>
    <string name="loginButton">login</string>
    <!--Login Page Help-->
    <string name="loginHelpForgotPassword">Forgot your password?</string>
    <string name="loginHelpSignUp1">Don\'t have an account?</string>
    <string name="loginHelpSignUp2">\tSign up.</string>
    <!--Hello Page -->
    <string name="hellopagetext1">Hello there!</string>
    <string name="hellopagetext2">Before we begin, we\'d like to get to know more about you.</string>
    <!--Already have an account -->
    <string name="alreadyhaveaccount1">Already have an account?</string>
    <string name="alreadyhaveaccount2">\tLog in.</string>
    <!--Account Registration -->
    <string name="registrationTitle">Register for Gastronome</string>
    <string name="registrationName">Full Name</string>
    <string name="registrationEmail">Email</string>
    <string name="registrationPassword">Password</string>
    <string name="registrationConfirmPassword">Confirm Password</string>
    <string name="registrationRegisterButton">Register</string>
    <!--Gender Selection-->
    <string name="genderSelectPrompt">What\'s your gender?</string>
    <string name="genderFemale">Female</string>
    <string name="genderMale">Male</string>
    <!--Prompt Age Page-->
    <string name="promptAge">How old are you?</string>
    <!--Prompt Height Page-->
    <string name="promptHeight">How tall are you?</string>
    <!--Prompt Weight Page-->
    <string name="promptWeight">How much do you weigh?</string>
    <!--Choose Goal Page-->
    <string name="chooseGoal">What\'s your goal?</string>
    <string name="loseWeight">Lose weight</string>
    <string name="loseWeightDescription">Burn fat &amp; get lean</string>
    <string name="getFitter">Get fitter</string>
    <string name="getFitterDescription">Tone up &amp; feel healthy</string>
    <string name="gainMuscle">Gain muscle</string>
    <string name="gainMuscleDescription">Build mass &amp; gain strength</string>
    <!--Continue with account registration-->
    <string name="sign_up_motivation">You\'re almost done.</string>
    <string name="OAuthGoogle">Continue with Google</string>
    <string name="registerEmail">Continue with email</string>
    <!--Terms and Conditions-->
    <string name="tos">When you \"Continue\", you agree to Gastronome\'s <u>Terms of Service</u>. We will manage information about you as described in our <u>Privacy Policy</u>, and <u>Cookie Policy</u>,</string>


    <!--Feed-->
    <string name="FeedIntroNotification">Here you’ll find: \n All the amazing recipes you can find \n in Gastronome!</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="got_it">GOT IT</string>
    <string name="popular">Popular</string>
    <string name="home">Home</string>
    <string name="feed">Feed</string>
</resources>