<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/btnRegisterBack"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/black_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="48dp"
        android:fontFamily="@font/avenir_black"
        android:text="@string/registrationTitle"
        android:textAlignment="viewStart"
        android:textColor="#323643"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/avenir_medium"
        android:text="Full Name"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/etRegistrationName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/avenir_roman"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <EditText
        android:id="@+id/etRegistrationEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/avenir_roman"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/etRegistrationName"
        app:layout_constraintStart_toStartOf="@+id/etRegistrationName"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <EditText
        android:id="@+id/etRegistrationPW"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/avenir_roman"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/etRegistrationEmail"
        app:layout_constraintStart_toStartOf="@+id/etRegistrationEmail"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <EditText
        android:id="@+id/etRegistrationCfmPW"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/avenir_roman"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/etRegistrationPW"
        app:layout_constraintStart_toStartOf="@+id/textView20"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <Button
        android:id="@+id/btnRegisterAccount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/signupbutton"
        android:fontFamily="@font/avenir_black"
        android:text="@string/registrationRegisterButton"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="@+id/etRegistrationCfmPW"
        app:layout_constraintStart_toStartOf="@+id/etRegistrationCfmPW"
        app:layout_constraintTop_toBottomOf="@+id/etRegistrationCfmPW" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/avenir_medium"
        android:text="@string/registrationEmail"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/etRegistrationName"
        app:layout_constraintTop_toBottomOf="@+id/etRegistrationName" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/avenir_medium"
        android:text="@string/registrationPassword"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/etRegistrationEmail"
        app:layout_constraintTop_toBottomOf="@+id/etRegistrationEmail" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/avenir_medium"
        android:text="@string/registrationConfirmPassword"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/etRegistrationPW"
        app:layout_constraintTop_toBottomOf="@+id/etRegistrationPW" />

    <LinearLayout
        android:id="@+id/llLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/btnRegisterAccount"
        app:layout_constraintStart_toStartOf="@+id/btnRegisterAccount"
        app:layout_constraintTop_toBottomOf="@+id/btnRegisterAccount">

        <TextView
            android:id="@+id/tvRegisterText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/avenir_roman"
            android:text="@string/alreadyhaveaccount1"
            android:textColor="#737373"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvRegisterText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/avenir_black"
            android:text="@string/alreadyhaveaccount2"
            android:textColor="#037171"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>