<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseGoal">

    <TextView
        android:id="@+id/tvGoalText1"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="140dp"
        android:text="@string/chooseGoal"
        android:textColor="#323643"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/goalOptions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="50dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGoalText1">

        <LinearLayout
            android:id="@+id/goalLoseWeight"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gender_card"
            android:orientation="horizontal"
            android:onClick="onLoseWeightClick">

            <LinearLayout
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvLoseWeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/loseWeight"
                    android:textColor="#323643"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvLoseWeightDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/loseWeightDescription"
                    android:textColor="#323643" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imgRightArrow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="90dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/select_goal_arrow" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/goalGetFitter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:background="@drawable/gender_card"
            android:onClick="onGetFitterClick"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvGetFitter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/getFitter"
                    android:textColor="#323643"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvGetFitterDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/getFitterDescription"
                    android:textColor="#323643" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imgRightArrow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="90dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/select_goal_arrow" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/goalGainMuscle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:background="@drawable/gender_card"
            android:onClick="onGainMuscle"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvGainMuscle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gainMuscle"
                    android:textColor="#323643"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvGainMuscleDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gainMuscleDescription"
                    android:textColor="#323643" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imgRightArrow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="90dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/select_goal_arrow" />
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>