<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GenderSelection"
    tools:layout_editor_absoluteY="25dp">

    <ImageView
        android:id="@+id/imgGenderLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/temp_icon" />

    <TextView
        android:id="@+id/tvPromptGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/genderSelectPrompt"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imgGenderLogo"
        app:layout_constraintStart_toStartOf="@+id/imgGenderLogo"
        app:layout_constraintTop_toBottomOf="@+id/imgGenderLogo" />

    <Button
        android:id="@+id/btnGenderFemale"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:layout_marginStart="70dp"
        android:background="@drawable/gender_card"
        app:layout_constraintBottom_toBottomOf="@+id/btnGenderMale"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnGenderMale"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imgFemaleSymbol"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tvFemale"
        app:layout_constraintEnd_toEndOf="@+id/btnGenderFemale"
        app:layout_constraintStart_toStartOf="@+id/btnGenderFemale"
        app:layout_constraintTop_toTopOf="@+id/btnGenderFemale"
        app:srcCompat="@drawable/femenine" />

    <TextView
        android:id="@+id/tvFemale"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:text="@string/genderFemale"
        app:layout_constraintBottom_toBottomOf="@+id/btnGenderFemale"
        app:layout_constraintEnd_toEndOf="@+id/imgFemaleSymbol"
        app:layout_constraintStart_toStartOf="@+id/imgFemaleSymbol" />


    <Button
        android:id="@+id/btnGenderMale"
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="70dp"
        android:background="@drawable/gender_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPromptGender" />

    <ImageView
        android:id="@+id/imgMaleSymbol"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tvMale"
        app:layout_constraintEnd_toEndOf="@+id/btnGenderMale"
        app:layout_constraintStart_toStartOf="@+id/btnGenderMale"
        app:layout_constraintTop_toTopOf="@+id/btnGenderMale"
        app:srcCompat="@drawable/masculine" />

    <TextView
        android:id="@+id/tvMale"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:text="@string/genderMale"
        app:layout_constraintBottom_toBottomOf="@+id/btnGenderMale"
        app:layout_constraintEnd_toEndOf="@+id/imgMaleSymbol"
        app:layout_constraintStart_toStartOf="@+id/imgMaleSymbol" />

    <LinearLayout
        android:id="@+id/tvGenderPageText1"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvGenderText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/alreadyhaveaccount1"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvGenderText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/alreadyhaveaccount2"
            android:textColor="#ff0544"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>