<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InputWeight">

    <ImageView
        android:id="@+id/imgWeightPageLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/tvPromptWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/promptWeight"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imgWeightPageLogo"
        app:layout_constraintStart_toStartOf="@+id/imgWeightPageLogo"
        app:layout_constraintTop_toBottomOf="@+id/imgWeightPageLogo" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPromptWeight">

        <EditText
            android:id="@+id/etWeight"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="Eg: 70"
            android:inputType="number"
            android:textAlignment="center"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="@+id/tvPromptWeight"
            app:layout_constraintTop_toBottomOf="@+id/tvPromptWeight" />

        <TextView
            android:id="@+id/tvWeightUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="KG"
            android:textSize="16sp"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="@+id/etWeight"
            app:layout_constraintEnd_toEndOf="@+id/tvPromptWeight"
            app:layout_constraintStart_toEndOf="@+id/etWeight"
            app:layout_constraintTop_toTopOf="@+id/etWeight" />

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabnextpage5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:clickable="true"
        app:backgroundTint="#ff0544"
        app:layout_constraintStart_toEndOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:srcCompat="@drawable/peach_rounded_button" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvWeightText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/alreadyhaveaccount1"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvWeightText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/alreadyhaveaccount2"
            android:textColor="#ff0544"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
